cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 17)
project( vis_findcontoursAlgo )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} include)
add_executable( vis_findcontours vis_findcontours.cpp  vis_cv_mat.cpp)
target_link_libraries( vis_findcontours ${OpenCV_LIBS} )
